--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <p>With so many cloud techologies written with open API's, I'm using my coding skills to enhance the way we communicate with clients today.</p>
         <p>Outside of work and coding, I love the beach and skiing... I'm pictured above with my dog, Amy... A blue english staffy with a heart of gold.</p>
     </div>
+
     <div id="content-div">
             <div id="content-menu">
                 <p>Covid 19 Travel Planner</p>
@@ -51,6 +52,40 @@
     <div>
         <img id="weather-image" src="Images/Weather-Dashboard.jpg">
     </div>
+
+    <div id="content-div">
+        <div id="content-menu">
+            <p>Covid 19 Travel Planner</p>
+            <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Access the app!</a> 
+            <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
+            <p>Technologies used: HTML, CSS, JavaScript, Bootstrap</p>
+        </div>
+    <div>
+        <img id="travel-image" src="Images/Travel Planner.jpg">
+    </div>
+
+    <div id="content-div">
+        <div id="content-menu">
+            <p>Covid 19 Travel Planner</p>
+            <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Access the app!</a> 
+            <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
+            <p>Technologies used: HTML, CSS, JavaScript, Bootstrap</p>
+        </div>
+    <div>
+        <img id="travel-image" src="Images/Travel Planner.jpg">
+    </div>
+
+    <div id="content-div">
+        <div id="content-menu">
+            <p>Covid 19 Travel Planner</p>
+            <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Access the app!</a> 
+            <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
+            <p>Technologies used: HTML, CSS, JavaScript, Bootstrap</p>
+        </div>
+    <div>
+        <img id="travel-image" src="Images/Travel Planner.jpg">
+    </div>
+
 
     </div>
 </body>
