--- a/index.html
+++ b/index.html
@@ -23,70 +23,50 @@
         <img id="rosedale" src="Images/Rosedale.jpg">
     </div>
     <div id="text">
-        <p>About me</p>
+        <h3>About me</h3>
         <p>Hi, my name is Oscar and I am on my way to becoming a full stack web developer. I'm learning to code and having fun in the process!</p>
         <p>Outside of coding, I work in corporate I.T as a field account manager, assisting clients maximize their return from technology investments.</p>
-        <p>With so many cloud techologies written with open API's, I'm using my coding skills to enhance the way we communicate with clients today.</p>
+        <p>With so many cloud techologies written with open API's, I'm using my coding skills to enhance the way I communicate with clients today.</p>
         <p>Outside of work and coding, I love the beach and skiing... I'm pictured above with my dog, Amy... A blue english staffy with a heart of gold.</p>
     </div>
 
-    <div id="content-div">
-            <div id="content-menu">
-                <p>Covid 19 Travel Planner</p>
-                <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Access the app!</a> 
-                <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
-                <p>Technologies used: HTML, CSS, JavaScript, Bootstrap</p>
-            </div>
-        <div>
-            <img id="travel-image" src="Images/Travel Planner.jpg">
+    <h3>My Projects</h3>
+    <div id="projects">
+
+        <div id="covid">
+            <img id="project-image" id="travel-image" src="Images/Travel Planner.jpg">
+            <p>Covid 19 Travel Planner</p>
+            <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Live App</a> 
+            <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
         </div>
 
-    </div>
-    <div id="content-div">
-        <div id="content-menu">
+        <div id="weather">
+            <img id="project-image" id="weather-image" src="Images/Weather-Dashboard.jpg">
             <p>Weather Forecast Application</p>
             <a href="https://oscarcbryant.github.io/Weather-Dashboard/">Access the app!</a> 
             <a href="https://github.com/oscarcbryant/Weather-Dashboard">Access the Git Repo!</a>
-            <p>Technologies used: HTML, CSS, JavaScript, Bootstrap</p>
         </div>
-    <div>
-        <img id="weather-image" src="Images/Weather-Dashboard.jpg">
-    </div>
 
-    <div id="content-div">
-        <div id="content-menu">
-            <p>Covid 19 Travel Planner</p>
+        <div id="musicalchairs">
+            <img id="project-image" id="musical-image" src="Images/musicalchairs.jpg">
+            <p>Musical Chairs</p>
             <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Access the app!</a> 
             <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
-            <p>Technologies used: HTML, CSS, JavaScript, Bootstrap</p>
         </div>
-    <div>
-        <img id="travel-image" src="Images/Travel Planner.jpg">
-    </div>
 
-    <div id="content-div">
-        <div id="content-menu">
-            <p>Covid 19 Travel Planner</p>
+        <div id="passwordgenerator">
+            <img id="project-image" id="password" src="Images/passwordgenerator.jpg">
+            <p>Password Generator</p>
             <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Access the app!</a> 
             <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
-            <p>Technologies used: HTML, CSS, JavaScript, Bootstrap</p>
         </div>
-    <div>
-        <img id="travel-image" src="Images/Travel Planner.jpg">
-    </div>
 
-    <div id="content-div">
-        <div id="content-menu">
-            <p>Covid 19 Travel Planner</p>
+        <div id="notetaker">
+            <img id="project-image" id="musical-image" src="Images/notetaker.jpg">
+            <p>Digital Note Taker</p>
             <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Access the app!</a> 
             <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
-            <p>Technologies used: HTML, CSS, JavaScript, Bootstrap</p>
         </div>
-    <div>
-        <img id="travel-image" src="Images/Travel Planner.jpg">
-    </div>
-
-
     </div>
 </body>
 <footer id="footer">
