adding button handlers to projects links

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div id="covid">
             <img id="project-image" id="travel-image" src="Images/Travel Planner.jpg">
             <p>Covid 19 Travel Planner</p>
-            <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Live App</a> 
-            <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
+            <button onclick="document.location='https://gabi-m-p.github.io/Covid-19-Travel-Planner/'">Live App</button> 
+            <button onclick="document.location='https://github.com/Gabi-m-p/Covid-19-Travel-Planner'">Git Repo</button>
         </div>
 
         <div id="weather">
