adding buttons to each project

--- a/index.html
+++ b/index.html
@@ -43,29 +43,29 @@
         <div id="weather">
             <img id="project-image" id="weather-image" src="Images/Weather-Dashboard.jpg">
             <p>Weather Forecast Application</p>
-            <a href="https://oscarcbryant.github.io/Weather-Dashboard/">Access the app!</a> 
-            <a href="https://github.com/oscarcbryant/Weather-Dashboard">Access the Git Repo!</a>
+            <button onclick="document.location='https://oscarcbryant.github.io/Weather-Dashboard/'">Live App</button> 
+            <button onclick="document.location='https://github.com/oscarcbryant/Weather-Dashboard'">Git Repo</button>
         </div>
 
         <div id="musicalchairs">
             <img id="project-image" id="musical-image" src="Images/musicalchairs.jpg">
             <p>Musical Chairs</p>
-            <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Access the app!</a> 
-            <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
+            <button onclick="document.location='https://musical-chair.herokuapp.com/'">Live App</button> 
+            <button onclick="document.location='https://github.com/levigun/musical-chair'">Git Repo</button>
         </div>
 
         <div id="passwordgenerator">
             <img id="project-image" id="password" src="Images/passwordgenerator.jpg">
             <p>Password Generator</p>
-            <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Access the app!</a> 
-            <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
+            <button onclick="document.location='https://oscarcbryant.github.io/Password-Generator/'">Live App</button> 
+            <button onclick="document.location='https://github.com/oscarcbryant/Password-Generator'">Git Repo</button>
         </div>
 
         <div id="notetaker">
             <img id="project-image" id="musical-image" src="Images/notetaker.jpg">
             <p>Digital Note Taker</p>
-            <a href="https://gabi-m-p.github.io/Covid-19-Travel-Planner/">Access the app!</a> 
-            <a href="https://github.com/Gabi-m-p/Covid-19-Travel-Planner">Access our Git Repo!</a>
+            <button onclick="document.location='https://vast-everglades-88551.herokuapp.com/'">Live App</button> 
+            <button onclick="document.location='https://github.com/oscarcbryant/Digital-Note-taker'">Git Repo</button>
         </div>
     </div>
 </body>
