adding style to buttons

--- a/index.html
+++ b/index.html
@@ -35,37 +35,47 @@
 
         <div id="covid">
             <img id="project-image" id="travel-image" src="Images/Travel Planner.jpg">
-            <p>Covid 19 Travel Planner</p>
+            <p id="project-title">Covid 19 Travel Planner</p>
+            <div id="button-position">
             <button onclick="document.location='https://gabi-m-p.github.io/Covid-19-Travel-Planner/'">Live App</button> 
             <button onclick="document.location='https://github.com/Gabi-m-p/Covid-19-Travel-Planner'">Git Repo</button>
+        </div>
         </div>
 
         <div id="weather">
             <img id="project-image" id="weather-image" src="Images/Weather-Dashboard.jpg">
-            <p>Weather Forecast Application</p>
+            <p id="project-title">Weather Forecast Application</p>
+            <div id="button-position">
             <button onclick="document.location='https://oscarcbryant.github.io/Weather-Dashboard/'">Live App</button> 
             <button onclick="document.location='https://github.com/oscarcbryant/Weather-Dashboard'">Git Repo</button>
+        </div>
         </div>
 
         <div id="musicalchairs">
             <img id="project-image" id="musical-image" src="Images/musicalchairs.jpg">
-            <p>Musical Chairs</p>
+            <p id="project-title">Musical Chairs</p>
+            <div id="button-position">
             <button onclick="document.location='https://musical-chair.herokuapp.com/'">Live App</button> 
             <button onclick="document.location='https://github.com/levigun/musical-chair'">Git Repo</button>
+        </div>
         </div>
 
         <div id="passwordgenerator">
             <img id="project-image" id="password" src="Images/passwordgenerator.jpg">
-            <p>Password Generator</p>
+            <p id="project-title">Password Generator</p>
+            <div id="button-position">
             <button onclick="document.location='https://oscarcbryant.github.io/Password-Generator/'">Live App</button> 
             <button onclick="document.location='https://github.com/oscarcbryant/Password-Generator'">Git Repo</button>
+        </div>
         </div>
 
         <div id="notetaker">
             <img id="project-image" id="musical-image" src="Images/notetaker.jpg">
-            <p>Digital Note Taker</p>
+            <p id="project-title">Digital Note Taker</p>
+            <div id="button-position">
             <button onclick="document.location='https://vast-everglades-88551.herokuapp.com/'">Live App</button> 
             <button onclick="document.location='https://github.com/oscarcbryant/Digital-Note-taker'">Git Repo</button>
+        </div>
         </div>
     </div>
 </body>
