updating nav bar

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <header>
         <nav id='nav-content'>
             <p id="name">Oscar Bryant</p>
-            <div>
-            <a>About Me</a>
-            <a>My Projects</a>
-            <a>Contact Me</a>
+            <div id="nav-links">
+            <a class="nav-links">About Me</a>
+            <a class="nav-links">My Projects</a>
+            <a class="nav-links">Contact Me</a>
             </div>
         </nav>
 </header>
