--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <link href="style.css" rel="stylesheet">
 <header>
-        <nav id='nav-content'>
+        <nav class='nav-content'>
             <p id="name">Oscar Bryant</p>
             <div id="nav-links">
-            <a class="nav-links">About Me</a>
-            <a class="nav-links">My Projects</a>
-            <a class="nav-links">Contact Me</a>
+            <a class="nav-links" href="#About-Me">About Me</a>
+            <a class="nav-links" href="#My-Projects">My Projects</a>
+            <a class="nav-links" href="#Contact-Me">Contact Me</a>
             </div>
         </nav>
 </header>
@@ -23,14 +23,14 @@
         <img id="rosedale" src="Images/Rosedale.jpg">
     </div>
     <div id="text">
-        <h3>About me</h3>
+        <h3 id="About-Me">About me</h3>
         <p>Hi, my name is Oscar and I am on my way to becoming a full stack web developer. I'm learning to code and having fun in the process!</p>
         <p>Outside of coding, I work in corporate I.T as a field account manager, assisting clients maximize their return from technology investments.</p>
         <p>With so many cloud techologies written with open API's, I'm using my coding skills to enhance the way I communicate with clients today.</p>
         <p>Outside of work and coding, I love the beach and skiing... I'm pictured above with my dog, Amy... A blue english staffy with a heart of gold.</p>
     </div>
 
-    <h3>My Projects</h3>
+    <h3 id="My-Projects">My Projects</h3>
     <div id="projects">
 
         <div id="covid">
@@ -79,7 +79,7 @@
         </div>
     </div>
 </body>
-<footer id="footer">
+<footer id="Contact-Me">
 
 </footer>
 </html>
