--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <link href="style.css" rel="stylesheet">
@@ -27,7 +28,7 @@
         <p>Hi, my name is Oscar and I am on my way to becoming a full stack web developer. I'm learning to code and having fun in the process!</p>
         <p>Outside of coding, I work in corporate I.T as a field account manager, assisting clients maximize their return from technology investments.</p>
         <p>With so many cloud techologies written with open API's, I'm using my coding skills to enhance the way I communicate with clients today.</p>
-        <p>Outside of work and coding, I love the beach and skiing... I'm pictured above with my dog, Amy... A blue english staffy with a heart of gold.</p>
+        <p>When I am not working or coding, I love the beach and skiing... I'm pictured above with my dog, Amy... A blue english staffy with a heart of gold.</p>
     </div>
 
     <h3 id="My-Projects">My Projects</h3>
@@ -79,7 +80,14 @@
         </div>
     </div>
 </body>
-<footer id="Contact-Me">
 
+    <h3 id="contact">Contact Me</h3>
+    <div id="icons">
+    <i class="fa fa-github" style="font-size:48px"></i>
+    <i class="fa fa-linkedin-square" style="font-size:48px"></i>
+    <i class="fa fa-envelope" style="font-size:48px"></i>
+    </div>
+<footer id="Contact-Me">
+    <h4>Oscar Byrant, Coding Bootcamp 2022</h4>
 </footer>
 </html>
