adding hyperlinks to contact me icons

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
     <h3 id="contact">Contact Me</h3>
     <div id="icons">
-    <i class="fa fa-github" style="font-size:48px"></i>
-    <i class="fa fa-linkedin-square" style="font-size:48px"></i>
-    <i class="fa fa-envelope" style="font-size:48px"></i>
+    <a href="https://github.com/oscarcbryant/"><i class="fa fa-github" style="font-size:48px"></i></a>
+    <a href="https://www.linkedin.com/in/oscarcbryant/"><i class="fa fa-linkedin-square" style="font-size:48px"></i></a>
+    <a href="mailto:oscarcbryant@gmail.com"><i class="fa fa-envelope" style="font-size:48px"></i></a>
     </div>
 <footer id="Contact-Me">
     <h4>Oscar Byrant, Coding Bootcamp 2022</h4>
