increased size of font for h3

--- a/index.html
+++ b/index.html
@@ -80,14 +80,16 @@
         </div>
     </div>
 </body>
-
-    <h3 id="contact">Contact Me</h3>
-    <div id="icons">
-    <a href="https://github.com/oscarcbryant/"><i class="fa fa-github" style="font-size:48px"></i></a>
-    <a href="https://www.linkedin.com/in/oscarcbryant/"><i class="fa fa-linkedin-square" style="font-size:48px"></i></a>
-    <a href="mailto:oscarcbryant@gmail.com"><i class="fa fa-envelope" style="font-size:48px"></i></a>
+     <div id="contact-div"> 
+        <h3 id="contact">Contact Me</h3>
+            <div id="icons">
+                <a href="https://github.com/oscarcbryant/"><i class="fa fa-github" style="font-size:48px"></i></a>
+                <a href="https://www.linkedin.com/in/oscarcbryant/"><i class="fa fa-linkedin-square" style="font-size:48px"></i></a>
+                <a href="mailto:oscarcbryant@gmail.com"><i class="fa fa-envelope" style="font-size:48px"></i></a>
+            </div>
     </div>
+
 <footer id="Contact-Me">
-    <h4>Oscar Byrant, Coding Bootcamp 2022</h4>
+    <h4>Oscar Bryant, Coding Bootcamp 2022</h4>
 </footer>
 </html>
