--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
 </header>
 <body>
     <div id="header-pics">
-        <img id="oscar" src="Images/Oscar.jpg">
+        
         <img id="rosedale" src="Images/Rosedale.jpg">
     </div>
-    <div id="text">
-        <h3 id="About-Me">About me</h3>
-        <p>Hi, my name is Oscar and I am on my way to becoming a full stack web developer. I'm learning to code and having fun in the process!</p>
-        <p>Outside of coding, I work in corporate I.T as a field account manager, assisting clients maximize their return from technology investments.</p>
-        <p>With so many cloud techologies written with open API's, I'm using my coding skills to enhance the way I communicate with clients today.</p>
-        <p>When I am not working or coding, I love the beach and skiing... I'm pictured above with my dog, Amy... A blue english staffy with a heart of gold.</p>
+    <h3 id="About-Me">About me</h3>
+        <div id="about">
+  
+            <img id="oscar" src="Images/Oscar.jpg">
+        <div id="text">
+            <p>Hi, my name is Oscar and I am on my way to becoming a full stack web developer. I'm learning to code and having fun in the process!</p>
+            <p>Outside of coding, I work in corporate I.T as a field account manager, assisting clients maximize their return from technology investments.</p>
+            <p>With so many cloud techologies written with open API's, I'm using my coding skills to enhance the way I communicate with clients today.</p>
+            <p>When I am not working or coding, I love the beach and skiing... I'm pictured above with my dog, Amy... A blue english staffy with a heart of gold.</p>
+            <p>You can find a link to my resume here</p>
+        </div>
     </div>
 
     <h3 id="My-Projects">My Projects</h3>
