commiting new image for readme

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <p>With so many cloud techologies written with open API's, I'm using my coding skills to enhance the way I communicate with clients today.</p>
             <p>When I am not working or coding, I love the beach and skiing... I'm pictured above with my dog, Amy... A blue english staffy with a heart of gold.</p>
             <p>You can find a link to my resume here</p>
+            <a href="https://docs.google.com/document/d/1eq5-LPB50wH7V3E6v7s-f765jpakRw_1/edit?usp=sharing&ouid=107807854027561897623&rtpof=true&sd=true">Resume</a>
         </div>
     </div>
 
